# GOIT_WEB_hw6

./: create_db.py  create_dbs.py  create_dbs.sql  create_tables.sql  execute_query.py  main.db  pyproject.toml  test.db
queries/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
scripts/: create_db.py  fill_tables.py
scripts/sql_frames/: create_tables.sql  grades_filler.sql  groups_filler.sql  students_filler.sql  subjects_filler.sql  teachers_filler.sql
