[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["C-Hurtmann <constantine2903@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
faker = "^18.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
